# DK-King

./: .gitignore  package-lock.json
dk_king_frontend/: README.md  angular.json  package-lock.json  package.json  server.js
dk_king_frontend/src/: index.html
dk_king_frontend/src/app/: app.component.spec.ts  app.component.ts
dk_king_frontend/src/app/components/set-adder/: set-adder.component.html  set-adder.component.scss  set-adder.component.spec.ts  set-adder.component.ts
dk_king_frontend/src/app/components/set-result/: set-result.component.html  set-result.component.scss  set-result.component.spec.ts  set-result.component.ts
dk_king_frontend/src/app/components/set-tally/: set-tally.component.html  set-tally.component.spec.ts  set-tally.component.ts
dk_king_frontend/src/app/enviroments/: enviroment.ts
dk_king_frontend/src/app/home-page/: home-page.component.html  home-page.component.scss  home-page.component.ts
dk_king_frontend/src/app/interfaces/: set.ts
dk_king_frontend/src/app/services/: api.service.ts
dk_king_server/: Cargo.toml  sets.db
dk_king_server/src/: main.rs
