[package]
name = "dk_king_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
tokio = { version = "*", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
chrono = "*"
toml = "*"